fix sidebar line break on long text

--- a/css/ace.css
+++ b/css/ace.css
@@ -2773,11 +2773,13 @@ body.mob-safari .sidebar.sidebar-fixed {
     top: -1px;
     left: 42px;
     z-index: 1025;
-    width: 176px;
     height: 41px;
     line-height: 38px;
     padding-left: 12px;
     border: 1px solid;
+    min-width: 176px;
+    width: max-content;
+    padding-right: 12px;
 }
 .sidebar.menu-min .nav-list > li > a.dropdown-toggle > .menu-text {
     top: -1px;
